<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.conadasoft.imccalculadorapesoideal.ui.InicioFragment"
        android:label="@string/title_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.conadasoft.imccalculadorapesoideal.ui.DiarioFragment"
        android:label="@string/title_diario"
        tools:layout="@layout/fragment_diario" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.conadasoft.imccalculadorapesoideal.ui.AppsFragment"
        android:label="@string/title_apps"
        tools:layout="@layout/fragment_apps" />
</navigation>