<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DatosPersonales">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imagenGenero"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:scaleType="fitXY"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/icono_masc"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/titulo_dp"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/privacidad" />

                <TextView
                    android:id="@+id/tituloNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/nombre_dp"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <EditText
                    android:id="@+id/idNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp" />


                <TextView
                    android:id="@+id/tituloSexo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/sexo_dp"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tituloSexo"
                    app:layout_constraintStart_toStartOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radioMasc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:layout_marginStart="20dp"
                            android:text="@string/masculino_dp"/>

                        <RadioButton
                            android:id="@+id/radioFem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/femenino_dp" />
                    </LinearLayout>
                </RadioGroup>

                <Button
                    android:id="@+id/fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    style="?attr/materialButtonOutlinedStyle"
                    android:text="@string/nacimiento_dp"/>

                <TextView
                    android:id="@+id/fechaNacimentoTexto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    tools:text="@string/nacimiento_dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/tituloPeso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:text="@string/peso_dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <EditText
                        android:id="@+id/idPeso"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:layout_marginStart="20dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tituloPeso" />

                    <Spinner
                        android:id="@+id/medidasPeso"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintBottom_toBottomOf="@id/tituloPeso"
                        app:layout_constraintStart_toEndOf="@id/idPeso"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/tituloAlto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:text="@string/altura_dp"
                        app:layout_constraintTop_toBottomOf="@id/medidasPeso"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <EditText
                        android:id="@+id/idAltura"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        app:layout_constraintTop_toBottomOf="@id/medidasPeso"
                        app:layout_constraintStart_toEndOf="@id/tituloAlto" />
                    <TextView
                        android:id="@+id/tituloAltoP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="\'"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/medidasPeso"
                        app:layout_constraintStart_toEndOf="@id/idAltura" />

                    <EditText
                        android:id="@+id/idAltura2"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintTop_toBottomOf="@id/medidasPeso"
                        app:layout_constraintStart_toEndOf="@id/tituloAltoP" />
                    <TextView
                        android:id="@+id/tituloAltoPP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="\'\'"
                        app:layout_constraintTop_toBottomOf="@id/medidasPeso"
                        app:layout_constraintStart_toEndOf="@id/idAltura2"/>
                    <Spinner
                        android:id="@+id/medidasAlto"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintBottom_toBottomOf="@id/idAltura"
                        app:layout_constraintStart_toEndOf="@id/tituloAltoPP"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <Spinner
                        android:id="@+id/actividad"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:layout_marginTop="20dp"
                        android:layout_marginHorizontal="20dp"
                        app:layout_constraintTop_toBottomOf="@id/medidasAlto"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
                <Button
                    android:id="@+id/botonGrabar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/grabar_dp" />

            </LinearLayout>
        </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>